Cleared up some of the tutorial

--- a/Final_Project_Deliverable.ipynb
+++ b/Final_Project_Deliverable.ipynb
@@ -120,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 163,
+      "execution_count": null,
       "metadata": {
         "id": "VdM9YYEPxLwe"
       },
@@ -155,7 +155,7 @@
         },
         "outputId": "a097533c-f328-4933-efcb-cbb3731d2254"
       },
-      "execution_count": 164,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -201,7 +201,7 @@
         "id": "IAOMsggT1uCb",
         "outputId": "2c36dee8-da10-4e6e-dac0-82166b6641d3"
       },
-      "execution_count": 165,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -266,7 +266,7 @@
         "id": "9KsFLDEL4X4w",
         "outputId": "782f509f-6d7b-4e4b-8ce5-528c854a56d4"
       },
-      "execution_count": 166,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -294,7 +294,7 @@
         "id": "qteZyHlMBoHJ",
         "outputId": "c9c71f75-31dd-4515-a739-bcc2875e50bb"
       },
-      "execution_count": 167,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -311,7 +311,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Since the p-value is 1.86e^5, which is much less than 0.05, we can reject the null hypothesis, showing that there is a correlation between team side and goals, likely that being at home means you score more."
+        "After usimg a TTest, the p-value is 1.86e^5, which is much less than 0.05, so we can reject the null hypothesis, showing that there is a correlation between team side and goals, likely that being at home means you score more."
       ],
       "metadata": {
         "id": "1c-E6L1DGI-i"
@@ -356,7 +356,7 @@
         "id": "kG3S3dyqHVKj",
         "outputId": "f41894e2-5b30-40c5-f93f-515473dbc3aa"
       },
-      "execution_count": 168,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -404,7 +404,7 @@
         "id": "e-9bxp6mH84B",
         "outputId": "e00eab57-064e-4c44-f6c4-72b000180a8d"
       },
-      "execution_count": 169,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -421,7 +421,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Since our pvalue is 5.07e^-27, which is less than 0.05, we can reject the null hypothesis, showing that there is a correlation between teamside and winning the game.\n",
+        "Using ANOVA, we find that our pvalue is 5.07e^-27, which is less than 0.05, so we can reject the null hypothesis, showing that there is a correlation between teamside and winning the game.\n",
         "\n",
         "To see which side, I wil use a post-hoc test."
       ],
@@ -442,7 +442,7 @@
         "id": "l5SqOV2HUJUW",
         "outputId": "d1479db6-cc41-4b99-8890-ea167c069100"
       },
-      "execution_count": 170,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -502,7 +502,7 @@
         "id": "8XLd4yiBZnqX",
         "outputId": "f34cdb35-3349-4b1b-a732-07b7027f9bce"
       },
-      "execution_count": 171,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -531,7 +531,7 @@
         "id": "Q-56pNYWbFTi",
         "outputId": "4531398d-8785-4e58-8f48-00091dafec3d"
       },
-      "execution_count": 172,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -548,7 +548,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Since our coefficient value is 0.28, it suggests a very weak linear relationship, so players with better finishing may not have a higher potential."
+        "Since our Pearson's coefficient value is 0.28, it suggests a very weak linear relationship, so players with better finishing may not have a higher potential."
       ],
       "metadata": {
         "id": "SevlMLVXc-Wj"
@@ -575,9 +575,7 @@
         "\n",
         "The first question was answered earlier, it's the home team by a significant margin (about 46% chance to win a game at home).\n",
         "\n",
-        "The second question will be answered by making a model based on the data, using classification to predict the winners of the UCL, between Liverpool FC and Paris Saint-Germain. I will also use the previous matches of the UCL to test the data.\n",
-        "\n",
-        "The third question will be answereed using linear regression.\n"
+        "The second question will be answered by making a model based on the data, using classification to predict the winners of the UCL, between Liverpool FC and Paris Saint-Germain. I will also use the previous matches of the UCL to test the data.\n"
       ],
       "metadata": {
         "id": "enCnoF3cN08w"
@@ -613,7 +611,7 @@
       "metadata": {
         "id": "Uu05JnpGTNPG"
       },
-      "execution_count": 257,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -639,7 +637,7 @@
       "metadata": {
         "id": "nDjqozV8jwpn"
       },
-      "execution_count": 174,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -657,7 +655,7 @@
       "metadata": {
         "id": "FOuMDBSuj7_q"
       },
-      "execution_count": 175,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -680,7 +678,7 @@
       "metadata": {
         "id": "q6EqDyKlwBA-"
       },
-      "execution_count": 220,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -708,7 +706,7 @@
       "metadata": {
         "id": "AOxiZqsPWvZE"
       },
-      "execution_count": 177,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -729,7 +727,7 @@
       "metadata": {
         "id": "4_asFNmgXkWY"
       },
-      "execution_count": 178,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -749,7 +747,7 @@
       "metadata": {
         "id": "E-U8tY4JZAiI"
       },
-      "execution_count": 179,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -788,7 +786,7 @@
         "id": "EssO0XBKX_xC",
         "outputId": "c8cccea2-886a-46e9-ed71-f20cc897808a"
       },
-      "execution_count": 180,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -833,7 +831,7 @@
         "id": "1NeF8w_cb8n1",
         "outputId": "e736e626-1438-4b16-b21d-774de070c3e7"
       },
-      "execution_count": 181,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -860,7 +858,7 @@
         "id": "tayHz-9hb-py",
         "outputId": "571d4cc8-28ab-496a-bcba-32efdae16f58"
       },
-      "execution_count": 182,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -891,7 +889,7 @@
       "metadata": {
         "id": "mOjR5rI1iv5Z"
       },
-      "execution_count": 183,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -929,7 +927,7 @@
       "metadata": {
         "id": "jx5vv8XD3J5y"
       },
-      "execution_count": 184,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -971,7 +969,7 @@
         },
         "outputId": "790b0c15-a0d3-4868-be12-95148f679cc1"
       },
-      "execution_count": 359,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1025,7 +1023,7 @@
         "id": "cetpVKFLkbyS",
         "outputId": "3efa64c4-230d-4791-91c2-299ecb91c934"
       },
-      "execution_count": 362,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1052,7 +1050,7 @@
         "id": "bAc-VbIRlGFn",
         "outputId": "a3c6d64b-6eca-4d5c-e842-097a454eceab"
       },
-      "execution_count": 363,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1103,7 +1101,7 @@
         },
         "outputId": "e296da0a-198e-435e-d98b-b95d46aa98c3"
       },
-      "execution_count": 205,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1148,7 +1146,7 @@
         "id": "slQCxodFlLS8",
         "outputId": "fa061610-a539-41f6-bc37-7bdd9c10b2e5"
       },
-      "execution_count": 206,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1175,7 +1173,7 @@
         "id": "xQ7TX3GGlLnO",
         "outputId": "5818707f-7a6a-45b1-f106-4ce8dca8250b"
       },
-      "execution_count": 207,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1240,7 +1238,7 @@
         },
         "outputId": "75ef35d4-21eb-4928-b790-ffdf16a0f1c3"
       },
-      "execution_count": 360,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1285,7 +1283,7 @@
         "id": "GBmSe2RYl48A",
         "outputId": "028ce488-58bd-44d4-94a5-cb79c5d26b7c"
       },
-      "execution_count": 356,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1312,7 +1310,7 @@
         "id": "qdG4VQwfl5R2",
         "outputId": "24a75d38-8e10-49b3-e692-69d794f60f86"
       },
-      "execution_count": 357,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1369,7 +1367,7 @@
         "id": "cZYU8oycwpli",
         "outputId": "2ce457ea-fbfc-4dca-96f5-1777f3fe3ccf"
       },
-      "execution_count": 361,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1453,7 +1451,7 @@
         "id": "lEUcA0wLD8n0",
         "outputId": "2038beea-a60a-4ed3-fec8-7ff68821fef0"
       },
-      "execution_count": 328,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1508,7 +1506,7 @@
         "id": "LrOV0RyIGd-T",
         "outputId": "7f446f54-2482-4408-c898-8a015749e621"
       },
-      "execution_count": 329,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1560,7 +1558,7 @@
       "metadata": {
         "id": "BFSSRMdRQa0j"
       },
-      "execution_count": 287,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1598,7 +1596,7 @@
         "id": "hSXKETs0NTZ0",
         "outputId": "9aa1543c-9e1e-497e-a954-9008ccd1b24e"
       },
-      "execution_count": 288,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1648,7 +1646,7 @@
         "id": "8WOA8VjaOBvF",
         "outputId": "889a111d-58fe-487d-eccf-81218e97323b"
       },
-      "execution_count": 289,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1686,7 +1684,7 @@
         "id": "DUML9jk2Nz4u",
         "outputId": "a8702ece-6eff-48ce-a247-c281ef17b6e6"
       },
-      "execution_count": 290,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1749,7 +1747,7 @@
       "metadata": {
         "id": "G4fACGA7AsWG"
       },
-      "execution_count": 309,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1785,7 +1783,7 @@
         },
         "outputId": "8656b76a-8f46-44c2-e4a5-90b084fb8f9d"
       },
-      "execution_count": 310,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1835,7 +1833,7 @@
         "id": "6tE41XJnPEx3",
         "outputId": "74d33a73-c9e0-4d1f-9569-34f010b88ef3"
       },
-      "execution_count": 311,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1873,7 +1871,7 @@
         "id": "Kvg58ykhOHC2",
         "outputId": "4f0f850c-8350-4e90-a220-22d65f422f5e"
       },
-      "execution_count": 312,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1936,7 +1934,7 @@
       "metadata": {
         "id": "aEMiCzqqDalT"
       },
-      "execution_count": 317,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1963,7 +1961,7 @@
         "id": "jmd8km6oDs3S",
         "outputId": "2315c1eb-5550-4236-cf16-b9f6c036c3ff"
       },
-      "execution_count": 314,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2013,7 +2011,7 @@
         "id": "KJT4Twp0OV0a",
         "outputId": "67e1af11-a4d4-4969-884a-9ba8b9ed8529"
       },
-      "execution_count": 319,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2051,7 +2049,7 @@
         "id": "tiBC3XsKOVos",
         "outputId": "acf6fc56-0eb3-49a5-d780-e10f8c8e180a"
       },
-      "execution_count": 325,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2178,7 +2176,7 @@
       "metadata": {
         "id": "qM4SPBUAknvf"
       },
-      "execution_count": 333,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2197,15 +2195,9 @@
         "away_team_ids = match_db['away_team_api_id'].unique()\n",
         "\n",
         "for idx in home_team_ids:\n",
-        "  if (idx == 1601) :\n",
-        "    continue\n",
-        "  else:\n",
-        "    input[f'home_team_api_id_{idx}'] = 0\n",
+        "  input[f'home_team_api_id_{idx}'] = 0\n",
         "for idx in away_team_ids:\n",
-        "  if (idx == 1601) :\n",
-        "    continue\n",
-        "  else:\n",
-        "    input[f'away_team_api_id_{idx}'] = 0\n",
+        "  input[f'away_team_api_id_{idx}'] = 0\n",
         "\n",
         "input['home_team_api_id_9847'] = 1,  # PSG\n",
         "input['away_team_api_id_9825'] = 1,  # Arsenal\n",
@@ -2216,7 +2208,7 @@
       "metadata": {
         "id": "eUWU86pCkl4M"
       },
-      "execution_count": 345,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2234,7 +2226,7 @@
         "id": "uebV8etdh0xn",
         "outputId": "389d9803-bcac-4d08-fc77-49230c848001"
       },
-      "execution_count": 352,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2283,22 +2275,16 @@
       "metadata": {
         "id": "FvecGqX1pmM1"
       },
-      "execution_count": 364,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "for idx in home_team_ids:\n",
-        "  if (idx == 1601) :\n",
-        "    continue\n",
-        "  else:\n",
-        "    final_input[f'home_team_api_id_{idx}'] = 0\n",
+        "  final_input[f'home_team_api_id_{idx}'] = 0\n",
         "for idx in away_team_ids:\n",
-        "  if (idx == 1601) :\n",
-        "    continue\n",
-        "  else:\n",
-        "    final_input[f'away_team_api_id_{idx}'] = 0\n",
+        "  final_input[f'away_team_api_id_{idx}'] = 0\n",
         "\n",
         "final_input['home_team_api_id_9847'] = 1,  # PSG\n",
         "final_input['away_team_api_id_8636'] = 1,  # Inter\n",
@@ -2336,7 +2322,7 @@
         "id": "YAktiH_up2qe",
         "outputId": "61ba131c-fc4f-4502-deac-a6c2d6c6a5b8"
       },
-      "execution_count": 366,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
